Fine tune CSS in App Header - project steps 3 and 4.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -112,4 +112,10 @@ header form div.form-group input.form-control::-ms-input-placeholder {
     margin-bottom: 0;
     margin-right: 0.5rem;
   }
+
+  header form.navbar-form.navbar-right {
+    border: none;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+  }
 }
