--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -15,6 +15,16 @@ body {
   color: rgb(74, 74, 74);
 }
 
+a {
+  color: rgb(255, 102, 204);
+  text-decoration: none;
+}
+
+a:focus,
+a:hover {
+  color: rgb(255, 0, 171);
+}
+
 
 /* header section */
 
@@ -129,5 +139,34 @@ header form div.form-group input.form-control::-ms-input-placeholder {
     border: none;
     -webkit-box-shadow: none;
     box-shadow: none;
+  }
+}
+
+/* track list section */
+
+#track-list {
+  margin-top: 184px;
+  margin-left: -15px;
+  margin-right: -15px;
+}
+
+#track {
+  display: flex;
+  align-items: center;
+  padding: 0.25rem 0;
+  border-bottom: 1px solid rgb(204, 204, 204);
+}
+
+#track:hover {
+  background-color: rgb(239, 237, 242);
+}
+
+.popularity {
+  text-align: center;
+}
+
+@media (max-width: 767px) {
+  #track-list {
+    margin-top: 206px;
   }
 }
